// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileBottomNav > renders links for main sections 1`] = `
<nav
  aria-label="Main navigation"
  class="fixed bottom-0 left-0 right-0 z-navbar flex h-navbar-height w-full items-center justify-around border-t border-glass-border bg-nav backdrop-blur-nav pb-(--safe-area-bottom) shadow-premium transition-all md:hidden"
  role="navigation"
  style="transition-duration: 600ms; transition-timing-function: var(--ease-premium);"
>
  <a
    aria-current="page"
    aria-label="Home"
    class="group relative flex flex-1 flex-col items-center justify-center gap-(--space-2) py-(--space-1) text-text-primary transition-all outline-none select-none active text-brand font-bold scale-110"
    data-discover="true"
    href="/dashboard"
  >
    <div
      class="relative"
    >
      <div
        class="absolute inset-(calc(var(--space-4)*-1)) rounded-full bg-brand opacity-subtle blur-glass z-negative"
      />
      <span
        class="block z-decor"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layout-dashboard"
          fill="none"
          height="22"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="9"
            rx="1"
            width="7"
            x="3"
            y="3"
          />
          <rect
            height="5"
            rx="1"
            width="7"
            x="14"
            y="3"
          />
          <rect
            height="9"
            rx="1"
            width="7"
            x="14"
            y="12"
          />
          <rect
            height="5"
            rx="1"
            width="7"
            x="3"
            y="16"
          />
        </svg>
      </span>
    </div>
    <span
      class="z-decor text-label-xs font-black uppercase tracking-tight"
    >
      Home
    </span>
  </a>
  <a
    aria-label="News"
    class="group relative flex flex-1 flex-col items-center justify-center gap-(--space-2) py-(--space-1) text-text-primary transition-all outline-none select-none opacity-strong hover:opacity-100"
    data-discover="true"
    href="/news"
  >
    <div
      class="relative"
    >
      <span
        class="block z-decor"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-newspaper"
          fill="none"
          height="22"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 18h-5"
          />
          <path
            d="M18 14h-8"
          />
          <path
            d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
          />
          <rect
            height="4"
            rx="1"
            width="8"
            x="10"
            y="6"
          />
        </svg>
      </span>
    </div>
    <span
      class="z-decor text-label-xs font-black uppercase tracking-tight"
    >
      News
    </span>
  </a>
  <a
    aria-label="Events"
    class="group relative flex flex-1 flex-col items-center justify-center gap-(--space-2) py-(--space-1) text-text-primary transition-all outline-none select-none opacity-strong hover:opacity-100"
    data-discover="true"
    href="/events"
  >
    <div
      class="relative"
    >
      <span
        class="block z-decor"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar"
          fill="none"
          height="22"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
      </span>
    </div>
    <span
      class="z-decor text-label-xs font-black uppercase tracking-tight"
    >
      Events
    </span>
  </a>
  <a
    aria-label="Schedule"
    class="group relative flex flex-1 flex-col items-center justify-center gap-(--space-2) py-(--space-1) text-text-primary transition-all outline-none select-none opacity-strong hover:opacity-100"
    data-discover="true"
    href="/schedule"
  >
    <div
      class="relative"
    >
      <span
        class="block z-decor"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days"
          fill="none"
          height="22"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
      </span>
    </div>
    <span
      class="z-decor text-label-xs font-black uppercase tracking-tight"
    >
      Schedule
    </span>
  </a>
  <a
    aria-label="Profile"
    class="group relative flex flex-1 flex-col items-center justify-center gap-(--space-2) py-(--space-1) text-text-primary transition-all outline-none select-none opacity-strong hover:opacity-100"
    data-discover="true"
    href="/profile"
  >
    <div
      class="relative"
    >
      <span
        class="block z-decor"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user"
          fill="none"
          height="22"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
      </span>
    </div>
    <span
      class="z-decor text-label-xs font-black uppercase tracking-tight"
    >
      Profile
    </span>
  </a>
</nav>
`;

exports[`MobileBottomNav > renders links for main sections 2`] = `
<div>
  <nav
    aria-label="Main navigation"
    class="fixed bottom-0 left-0 right-0 z-navbar flex h-navbar-height w-full items-center justify-around border-t border-glass-border bg-nav backdrop-blur-nav pb-(--safe-area-bottom) shadow-premium transition-all md:hidden"
    role="navigation"
    style="transition-duration: 600ms; transition-timing-function: var(--ease-premium);"
  >
    <a
      aria-current="page"
      aria-label="Home"
      class="group relative flex flex-1 flex-col items-center justify-center gap-(--space-2) py-(--space-1) text-text-primary transition-all outline-none select-none active text-brand font-bold scale-110"
      data-discover="true"
      href="/dashboard"
    >
      <div
        class="relative"
      >
        <div
          class="absolute inset-(calc(var(--space-4)*-1)) rounded-full bg-brand opacity-subtle blur-glass z-negative"
        />
        <span
          class="block z-decor"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-layout-dashboard"
            fill="none"
            height="22"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="9"
              rx="1"
              width="7"
              x="3"
              y="3"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="14"
              y="3"
            />
            <rect
              height="9"
              rx="1"
              width="7"
              x="14"
              y="12"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="3"
              y="16"
            />
          </svg>
        </span>
      </div>
      <span
        class="z-decor text-label-xs font-black uppercase tracking-tight"
      >
        Home
      </span>
    </a>
    <a
      aria-label="News"
      class="group relative flex flex-1 flex-col items-center justify-center gap-(--space-2) py-(--space-1) text-text-primary transition-all outline-none select-none opacity-strong hover:opacity-100"
      data-discover="true"
      href="/news"
    >
      <div
        class="relative"
      >
        <span
          class="block z-decor"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-newspaper"
            fill="none"
            height="22"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 18h-5"
            />
            <path
              d="M18 14h-8"
            />
            <path
              d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
            />
            <rect
              height="4"
              rx="1"
              width="8"
              x="10"
              y="6"
            />
          </svg>
        </span>
      </div>
      <span
        class="z-decor text-label-xs font-black uppercase tracking-tight"
      >
        News
      </span>
    </a>
    <a
      aria-label="Events"
      class="group relative flex flex-1 flex-col items-center justify-center gap-(--space-2) py-(--space-1) text-text-primary transition-all outline-none select-none opacity-strong hover:opacity-100"
      data-discover="true"
      href="/events"
    >
      <div
        class="relative"
      >
        <span
          class="block z-decor"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-calendar"
            fill="none"
            height="22"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
        </span>
      </div>
      <span
        class="z-decor text-label-xs font-black uppercase tracking-tight"
      >
        Events
      </span>
    </a>
    <a
      aria-label="Schedule"
      class="group relative flex flex-1 flex-col items-center justify-center gap-(--space-2) py-(--space-1) text-text-primary transition-all outline-none select-none opacity-strong hover:opacity-100"
      data-discover="true"
      href="/schedule"
    >
      <div
        class="relative"
      >
        <span
          class="block z-decor"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-calendar-days"
            fill="none"
            height="22"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
            <path
              d="M8 14h.01"
            />
            <path
              d="M12 14h.01"
            />
            <path
              d="M16 14h.01"
            />
            <path
              d="M8 18h.01"
            />
            <path
              d="M12 18h.01"
            />
            <path
              d="M16 18h.01"
            />
          </svg>
        </span>
      </div>
      <span
        class="z-decor text-label-xs font-black uppercase tracking-tight"
      >
        Schedule
      </span>
    </a>
    <a
      aria-label="Profile"
      class="group relative flex flex-1 flex-col items-center justify-center gap-(--space-2) py-(--space-1) text-text-primary transition-all outline-none select-none opacity-strong hover:opacity-100"
      data-discover="true"
      href="/profile"
    >
      <div
        class="relative"
      >
        <span
          class="block z-decor"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user"
            fill="none"
            height="22"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </span>
      </div>
      <span
        class="z-decor text-label-xs font-black uppercase tracking-tight"
      >
        Profile
      </span>
    </a>
  </nav>
  <span
    aria-hidden="true"
    class="h-navbar-height bg-transparent transition-colors duration-slow md:hidden relative z-decor"
  />
</div>
`;
